--- a/docroot/assets/themes/giardino-dei-bimbi/giardino-dei-bimbi.css
+++ b/docroot/assets/themes/giardino-dei-bimbi/giardino-dei-bimbi.css
@@ -194,6 +194,7 @@ p, ul, h1, h2, h3, h4, h5, h6 {
   display: inline-flex;
   height: 100px;
   justify-content: center;
+  overflow: hidden;
   padding: 10px;
   width: 100px;
 }
@@ -202,6 +203,7 @@ p, ul, h1, h2, h3, h4, h5, h6 {
 }
 .services .tile picture {
   background-color: #fff;
+  color: #007042;
   border-radius: 50%;
   padding: 20px;
 }
@@ -256,6 +258,7 @@ p, ul, h1, h2, h3, h4, h5, h6 {
   grid-gap: 20px;
 }
 .info .icon {
+  max-height: 60px;
   width: 100%;
 }
 .info .description {
@@ -313,4 +316,7 @@ p, ul, h1, h2, h3, h4, h5, h6 {
 }
 .burger.is-open::after {
   transform: translateY(-5px) rotate(-45deg);
+}
+.icon {
+  fill: currentColor;
 }
