--- a/docroot/assets/themes/giardino-dei-bimbi/giardino-dei-bimbi.css
+++ b/docroot/assets/themes/giardino-dei-bimbi/giardino-dei-bimbi.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
   margin: 0;
   padding: 0;
@@ -26,7 +26,7 @@ section.nido {
   padding-top: 1em;
 }
 section.services {
-  background-color: #CECC50;
+  background-color: #cecc50;
   color: white;
 }
 section.reserved {
@@ -67,14 +67,23 @@ section a {
   transform: translateX(-50%);
 }
 h1 {
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   font-size: 3em;
   font-weight: normal;
   line-height: 1.3;
   margin: 0 auto;
   max-width: 1024px;
 }
-p, ul, h1, h2, h3, h4, h5, h6, figure, .wp-block-image {
+p,
+ul,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+figure,
+.wp-block-image {
   margin: 1em auto;
   max-width: 1024px;
 }
@@ -145,7 +154,7 @@ body:not(.home) .tree {
 .menu .current-menu-item a::before {
   background-color: #ff6666;
   border-radius: 50%;
-  content: '';
+  content: "";
   display: block;
   height: 8px;
   left: 50%;
@@ -316,7 +325,7 @@ body:not(.home) .tree {
 }
 .burger::before,
 .burger::after {
-  content: '';
+  content: "";
   background: #fff;
   position: absolute;
   height: 2px;
@@ -347,6 +356,13 @@ body:not(.home) .tree {
 
 .notice {
   border: 16px solid red;
+  padding: 20px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
+}
+.good-notice {
+  border: 16px solid #007042;
   padding: 20px;
   text-align: center;
   font-weight: bold;
